Update 'backend-tests-go-rlpwqvik' component image to: quay.io/rhtap_qe/backend-tests-go-rlpwqvik:525e3752b9dd51d8955f3fe42aed89dcbf0a5f90@sha256:43769ceb119e58e242cfb449ff914ad5eba8d5bb1d0c840ddfa971833eb047c6

--- a/components/backend-tests-go-rlpwqvik/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-rlpwqvik/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-rlpwqvik
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-rlpwqvik:525e3752b9dd51d8955f3fe42aed89dcbf0a5f90@sha256:43769ceb119e58e242cfb449ff914ad5eba8d5bb1d0c840ddfa971833eb047c6
+          name: container-image
